--- a/.drone.yml
+++ b/.drone.yml
@@ -5,5 +5,28 @@ name: default
 steps:
 - name: build
   image: node
-  commands:
-  - echo from_secret: docker_usernameaws_account
+  environment:
+    aws_account:
+      from_secret: aws_account
+  commands: # DRONE_BRANCH 為 drone 預設建立的環境變數, 可參考官方文檔
+  - "echo {aws_account}"
+
+# kind: pipeline
+# name: default
+
+# steps:
+# - name: publish  
+#   image: plugins/ecr
+#   settings:
+#     access_key: a50d28f4dd477bc184fbd10b376de753
+#     secret_key: bc5785d3ece6a9cdefa42eb99b58986f9095ff1c
+#     repo: bar
+#     registry: <account_id>.dkr.ecr.us-east-1.amazonaws.comd
+    
+# - name: deploy
+#   image: joshdvir/drone-ecs-deploy
+#   settings:
+#     cluster: my-cluster
+#     service: my-service
+#     image_name: my-image:latest
+#     aws_region: us-east-1
